[package]
name = "cratetorrent-cli"
version = "0.2.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 CLI client"
license = "MIT OR Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cratetorrent = { path = "../cratetorrent" }
flexi_logger = "0.30.1"
hex = "0.4"
structopt = "0.3"
termion = "4.0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
tui = { version = "0.19.0", features = ["termion"] }