[package]
name = "cratetorrent"
version = "0.2.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 engine library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mandreyel/cratetorrent/"
homepage = "https://github.com/mandreyel/cratetorrent/"
keywords = ["bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
futures = "0.3"
hex = "0.4"
log = "0.4"
lru = "0.14.0"
nix = { version = "0.30.1", features = ["uio", "ioctl"] }
percent-encoding = "2.3"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_derive = "1.0"
sha-1 = "0.10.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
url = "2.5"
bytes = "1.10.1"


[dev-dependencies]
mockito = { version = "1.7.0" }
tokio = { version = "1.0", features = ["macros", "rt"] }


[features]
# No extras by default
default = []

# Enable client-string & peer_id spoofing
spoofing = []

# Enable injecting extra peers into tracker responses
peer_inject = []

# Never upload to peers
ghostleech = []

# stop uploading when a max ratio is reached
ratio = []

# Multiply upload ratio by a factor?
upload_multiplier = []